--- a/Project_from_3/app/templates/base.html
+++ b/Project_from_3/app/templates/base.html
@@ -28,10 +28,18 @@
     </div>
   </div>
 </nav>
-<div class="flash_message" align="center">{% for msg in get_flashed_messages() %}
-  {{msg}}
- {% endfor %}
+{% for category, message in get_flashed_messages(with_categories=true) %}
+<div align="center" class="alert alert-{{ category }}">
+{{ message }}
 </div>
+{% endfor %}
+
+<!-- <div class="flash_message" align="center">{% for msg in get_flashed_messages() %}-->
+<!--               {{msg}}-->
+<!--              {% endfor %}-->
+<!-- </div>-->
+{%block content%}
+{% endblock %}
 
 {%block info%}
 {% endblock %}
