--- a/Project_from_3/app/contact_form/templates/contact_form/contact_form.html
+++ b/Project_from_3/app/contact_form/templates/contact_form/contact_form.html
@@ -5,7 +5,7 @@
 {%from "_render_field.html" import render_field%}
  <div class="form-wrapper" align="center">
 
-      <form method="POST" action="{{ url_for('contact') }}">
+        <form method="POST" action="{{ url_for('contact_form_bp_in.contact') }}">
                {{form.csrf_token}}
 
               {%if cookie_name is none%}
@@ -18,6 +18,6 @@
           <br>
           {{ form.submit(class="btn btn-light btn-lg") }}
 
-      </form>
+        </form>
     </div>
 {% endblock %}
