--- a/Project_from_3/app/task/templates/task/categories.html
+++ b/Project_from_3/app/task/templates/task/categories.html
@@ -5,7 +5,7 @@
 {%from "_render_field.html" import render_field%}
  <div class="form-wrapper" align="center">
      <br>
-      <form action="{{ url_for('category_create') }}">
+      <form action="{{ url_for('task_bp_in.category_create') }}">
         <input  class="btn btn-light btn-lg" type="submit" value="Додати категорію" />
      </form>
      <br>
@@ -18,7 +18,7 @@
   <tbody>
   {% for elem in categories %}
   <tr>
-       <td class="table_form"><a class="href_in_background" href="/category/{{elem.id}}">{{elem.name}}</a></td>
+       <td class="table_form"><a class="href_in_background" href="{{ url_for('task_bp_in.category') }}/{{elem.id}}">{{elem.name}}"</a></td>
   </tr>
   {%endfor%}
   </tbody>
