--- a/Project_from_3/app/task/templates/task/employee_show.html
+++ b/Project_from_3/app/task/templates/task/employee_show.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {%block title%}Контактна форма{% endblock %}
 {%block content%}
 {%from "_render_field.html" import render_field%}
@@ -15,12 +16,13 @@
     </tr>
   </thead>
   <tbody>
+
   <tr>
       <td class="table_form">{{employee.id}}</td>
        <td class="table_form">{{employee.name}}</td>
       <td class="table_form">
           {%for task in tasks.all()%}
-              <a class="href_in_background" href="/task/{{task.id}}">{{task.title}}</a>
+              <a class="href_in_background" href="{{url_for('task_bp_in.task')}}/{{task.id}}">{{task.title}}</a>
           {%endfor%}
       </td>
       <td class="table_form">{{employee.count_of_completed_tasks}}</td>
@@ -33,7 +35,8 @@
   </tr>
   </tbody>
 </table>
-     <a href="/employee/{{ employee.id }}/update" class="btn btn-primary fs-5"> Edit </a>
-     <a href="/employee/{{ employee.id }}/delete" class="btn  btn-danger fs-5"> Delete </a>
+     <a href="{{url_for('task_bp_in.employee')}}/{{ employee.id }}/update" class="btn btn-primary fs-5"> Edit </a>
+     <a href="{{url_for('task_bp_in.employee')}}/{{ employee.id }}/delete" class="btn  btn-danger fs-5"> Delete </a>
 </div>
+
 {% endblock %}
