--- a/Project_from_3/app/task/templates/task/task_show.html
+++ b/Project_from_3/app/task/templates/task/task_show.html
@@ -30,7 +30,7 @@
        <td class="table_form">{{task.category_backref.name}}</td>
       <td class="table_form">
            {% for empl in task.employee_backref %}
-              <a class="href_in_background" href="/employee/{{ empl.id }}">{{empl.name}}</a>
+               <a class="href_in_background" href="/employee/{{ empl.id }}">{{empl.name}}</a>
            {%endfor%}
        </td>
   </tr>
@@ -38,10 +38,10 @@
 </table>
      <a href="/task/{{ task.id }}/update" class="btn btn-primary fs-5"> Edit </a>
      <a href="/task/{{ task.id }}/delete" class="btn  btn-danger fs-5"> Delete </a>
-<!--     <form action="{{ url_for('task_update', id=task.id) }}">-->
+<!--     <form action="{{ url_for('task_bp_in.task_update', id=task.id) }}">-->
 <!--        <input  class="btn btn-primary" type="submit" value="Edit" />-->
 <!--     </form>-->
-<!--     <form action="{{ url_for('task_delete', id=task.id) }}">-->
+<!--     <form action="{{ url_for('task_bp_in.task_delete', id=task.id) }}">-->
 <!--         <input  class="btn btn-danger" type="submit" value="Delete" />-->
 <!--     </form>-->
 </div>
