--- a/Project_from_3/app/profile/templates/profile/login.html
+++ b/Project_from_3/app/profile/templates/profile/login.html
@@ -13,7 +13,7 @@
     <br>
     {{ form.submit(class="btn btn-light btn-lg") }}<br><br>
     <a href="/register" class="btn btn-info fs-5"> Sing in </a>
-    <a href="/register" class="btn btn-secondary fs-5"> Sing up </a><br><br>
+    <a href="{{ url_for('user_bp_in.register')}}" class="btn btn-secondary fs-5"> Sing up </a><br><br>
 </form>
 </div>
 <br>
